@@ -5,6 +5,7 @@ uoproxy (0.1.1) unstable; urgency=low
   * parse encoded speech
   * new command "%drop" which drops the item currently held
   * bugfix: serials are in network byte order
+  * read equipment list from mobile_incoming packet
 
  --
 
